--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
         <festival.version>2.1-SNAPSHOT</festival.version>
         <boost.version>1.54-SNAPSHOT</boost.version>
         <bespin.version>1.2-SNAPSHOT</bespin.version>
+        <quazip.version>0.6.2-SNAPSHOT</quazip.version>
 
         <!-- Set parent (parent.customization) and child (customization) customizations here -->         
         <customization>default</customization>
