--- a/pom.xml
+++ b/pom.xml
@@ -286,7 +286,7 @@
                 </os>
             </activation>
             <modules>     
-                <module>traytool</module>
+                <!-- <module>traytool</module> -->
                 <!-- Vmaxproxy  module is disabled because we use already built version of vmax (vs2008 + qt4). We do so because vmaxproxy doesn't work if has been built on vs2012 -->
                 <!--<module>vmaxproxy</module>  -->
                 <module>client</module>                     
