--- a/pom.xml
+++ b/pom.xml
@@ -207,7 +207,7 @@
             <activation>        
                 <file>
                     <!-- the dumb activator does not recognize variables so I cannot put libdir here -->
-                    <missing>build_environment/target/buildenv1.timestamp</missing>
+                    <missing>build_environment/target/buildenv2.timestamp</missing>
                 </file> 
             </activation>
             <modules>   
@@ -290,7 +290,7 @@
                 <!-- Vmaxproxy  module is disabled because we use already built version of vmax (vs2008 + qt4). We do so because vmaxproxy doesn't work if has been built on vs2012 -->
                 <!--<module>vmaxproxy</module>  -->
                 <module>client</module>                     
-                <module>wixsetup/wixsetup-full</module>
+                <!-- <module>wixsetup/wixsetup-full</module> -->
                 <module>wixsetup/wixsetup-client-only</module>
             </modules>
             <properties>
