disable old appserver properties check
<==== Mercurial data ====>
Branch: master

--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,7 @@
                             <files>
                                 <file>${root.dir}/customization/default-values.properties</file>
                                 <file>${customization.dir}/build.properties</file>
-                                <file>${root.dir}/appserver/appserver-${arch}.properties</file>
+                                <!-- <file>${root.dir}/appserver/appserver-${arch}.properties</file> -->
                             </files>
                         </configuration>
                     </execution>                   
