--- a/build_environment/pom.xml
+++ b/build_environment/pom.xml
@@ -130,8 +130,11 @@
                         <configuration>
                             <target>
                                 <exec dir="${environment.dir}" executable="hg" failifexecutionfails="true">
-                                    <arg line="pull -u -f"/> 
+                                    <arg line="pull"/> 
                                 </exec>
+                                <exec dir="${environment.dir}" executable="hg" failifexecutionfails="true">
+                                    <arg line="up -C"/> 
+                                </exec>                                
                                 <chmod file="${environment.dir}/${buildenv.script}" perm="755"/>    
                                 <chmod file="${libdir}/virtualenv.sh" perm="755"/>    
                                 <exec dir="${environment.dir}" executable="${environment.dir}/${buildenv.script}" failifexecutionfails="true">
