fixed testcamera pom.xml
<==== Mercurial data ====>
Branch: master

--- a/testcamera/pom.xml
+++ b/testcamera/pom.xml
@@ -18,7 +18,7 @@
         <!--Global libs-->
         <global.libs>-lcommon -lavcodec -lavdevice -lavfilter -lavformat -lavutil -lswscale -lprotobuf</global.libs>
         <!--Specific os libs used-->
-        <qt.libs>core network multimedia concurrent xml</qt.libs>
+        <qt.libs>core network multimedia concurrent xml sql</qt.libs>
         <windows.oslibs>DbgHelp.lib -lIphlpapi -lwinmm -lws2_32 -lssleay32 -llibeay32</windows.oslibs>
         <windows.oslibs.release/>
         <windows.oslibs.debug/>  
