refs #3360 edge server now writes logs to /tmp/
<==== Mercurial data ====>
Branch: master

--- a/edge_firmware/isd/maven/filter-resources/usr/local/apps/networkoptix/mediaserver/etc/mediaserver.conf
+++ b/edge_firmware/isd/maven/filter-resources/usr/local/apps/networkoptix/mediaserver/etc/mediaserver.conf
@@ -7,3 +7,6 @@ eventsDBFilePath=/tmp/mserver_events.db
 authenticationEnabled=false
 systemName=isd_edge
 minStorageSpace=1000000000
+logDir=/tmp/
+maxLogFileSize=200000
+logArchiveSize=5
