Ignore libs folder contents
<==== Mercurial data ====>
Branch: feature_3259_android_client

--- a/.hgignore
+++ b/.hgignore
@@ -289,3 +289,4 @@ edge_firmware/isd/*.tar.gz
 android-client/android-main/AndroidManifest.xml
 android-client/android-main/res/**
 
+android-client/android-main/libs/**
