decreased memory usage on isd camera
<==== Mercurial data ====>
Branch: master

--- a/edge_firmware/isd/maven/filter-resources/usr/local/apps/networkoptix/mediaserver/etc/mediaserver.conf
+++ b/edge_firmware/isd/maven/filter-resources/usr/local/apps/networkoptix/mediaserver/etc/mediaserver.conf
@@ -8,3 +8,5 @@ minStorageSpace=1000000000
 logDir=/tmp/
 maxLogFileSize=200000
 logArchiveSize=5
+hlsChunkCacheSizeSec=0
+maxRecordQueueSizeBytes=1000000
