--- a/pom.xml
+++ b/pom.xml
@@ -421,6 +421,7 @@
                 </property>
             </activation>
             <properties>
+                <ffmpeg.version>0.11.5-SNAPSHOT</ffmpeg.version>
                 <toolchain.version>codesourcery-2013.11</toolchain.version>
                 <compiler>2011.09</compiler>
                 <openssl.version>1.0.0j-SNAPSHOT</openssl.version>
