--- a/pom.xml
+++ b/pom.xml
@@ -446,6 +446,7 @@
                 </property>
             </activation>
             <properties>
+                <ffmpeg.version>0.11.5-SNAPSHOT</ffmpeg.version>
                 <toolchain.version>linaro-multilib-2013.09</toolchain.version>
                 <compiler>${toolchain.version}</compiler>
                 <openssl.version>1.0.1f-SNAPSHOT</openssl.version>
