mediaserver logs on isd camera moved from /tmp/ to /tmp/mserver.logs/
<==== Mercurial data ====>
Branch: master

--- a/edge_firmware/maven/filter-resources/usr/local/apps/networkoptix/mediaserver/etc/mediaserver.conf
+++ b/edge_firmware/maven/filter-resources/usr/local/apps/networkoptix/mediaserver/etc/mediaserver.conf
@@ -5,7 +5,7 @@ secureAppserverConnection=1
 dataDir=/media/mmcblk0p1/mserver.data/
 systemName=isd_edge
 minStorageSpace=1000000000
-logDir=/tmp/
+logDir=/tmp/mserver.logs/
 maxLogFileSize=200000
 logArchiveSize=5
 hlsChunkCacheSizeSec=0
