--- a/pom.xml
+++ b/pom.xml
@@ -85,8 +85,8 @@
         <qtlib16>Qml</qtlib16>
         <qtlib17>Positioning</qtlib17>
         <qtlib18>Sensors</qtlib18>
-        <qtlib19></qtlib19>
-        <qtlib20></qtlib20>
+        <qtlib19/>
+        <qtlib20/>
 
         <!--QT plugins used-->      
         <qtplugin1>imageformats</qtplugin1>
@@ -428,7 +428,7 @@
             </properties>
             <modules>
                 <module>plugins/isd_native_plugin</module>
-		<module>edge_firmware</module>
+                <module>edge_firmware/isd</module>
             </modules>            
         </profile>
 
@@ -453,7 +453,7 @@
             </properties>
             <modules>
                 <module>plugins/isd_native_plugin</module>
-		<module>edge_firmware</module>
+                <module>edge_firmware/isd</module>
             </modules>            
         </profile>
 
@@ -475,6 +475,9 @@
                 <compiler>${toolchain.version}</compiler>
                 <openssl.version>1.0.0j-SNAPSHOT</openssl.version>
             </properties>
+            <modules>
+                <module>edge_firmware/rpi</module>
+            </modules>             
         </profile>
 
         <profile>
