Integrate webadmin into netoptix_vms project. Fix situation where MS always returned HTTP 200 for absent files in /static.
<==== Mercurial data ====>
Branch: master

--- a/.hgignore
+++ b/.hgignore
@@ -291,3 +291,8 @@ edge_firmware/isd/*.tar.gz
 android-client/android-main/AndroidManifest.xml
 android-client/android-main/res/**
 
+webadmin/node_modules
+webadmin/dist
+webadmin/.tmp
+webadmin/.sass-cache
+app/bower_components
