--- a/pom.xml
+++ b/pom.xml
@@ -293,7 +293,7 @@
                 <module>wixsetup/wixsetup-client-only</module>
             </modules>
             <properties>
-                <qt.dir>${environment.dir}/qt5/qtbase-${arch}</qt.dir>
+                <qt.dir>${environment.dir}/qt5webkit/qtbase-${arch}</qt.dir>
                 <environment.dir>${env.ENVIRONMENT}</environment.dir>
                 <init.python.dir>${environment.dir}/python/${arch}</init.python.dir>
                 <python.dir>${libdir}/${arch}/python/scripts</python.dir>                
