--- a/pom.xml
+++ b/pom.xml
@@ -290,7 +290,7 @@
                 <!--<module>vmaxproxy</module>  -->
                 <module>client</module>                     
                 <module>wixsetup/wixsetup-full</module>
-                <module>wixsetup/wixsetup-client-only</module>
+                <!-- <module>wixsetup/wixsetup-client-only</module> -->
             </modules>
             <properties>
                 <qt.dir>${environment.dir}/qt5webkit/qtbase-${arch}</qt.dir>
