replacements in plugin dll names
<==== Mercurial data ====>
Branch: new_qt_build

--- a/cpp/pom.xml
+++ b/cpp/pom.xml
@@ -299,6 +299,10 @@
                                             <token><![CDATA[@echo linking \$@ && link]]></token>
                                             <value>link</value>
                                         </replacement>
+                                        <replacement>
+                                            <token>${artifactId}${parsedVersion.majorVersion}</token>
+                                            <value>${artifactId}</value>
+                                        </replacement>										
                                     </replacements>
                                     <skip>${replace.skip}</skip>
                                 </configuration>								
