--- a/build_environment/pom.xml
+++ b/build_environment/pom.xml
@@ -138,7 +138,7 @@
 								<chmod file="${environment.dir}/${buildenv.script}" perm="755"/>    
 								<chmod file="${libdir}/virtualenv.sh" perm="755"/>    
 								<exec dir="${environment.dir}" executable="${environment.dir}/${buildenv.script}" failifexecutionfails="true">
-									<arg line="${arch} ${toolchain.version}"/> 
+									<arg line="${arch} ${toolchain.version} noqt4 noqt5"/> 
 								</exec>
 							</target>
 							<skip>${rsync.skip}</skip>
